# Audio-Visualizer

./: LICENSE  README.md  pyproject.toml  test.py
documentation/: CD_44_Abhijeet Poudel_lab5.docx  CS_44_Abhijeet  Poudel_Lab1.docx  CS_44_Abhijeet  Poudel_Lab2.docx  CS_44_Abhijeet  Poudel_Lab3.docx  CS_44_Abhijeet  Poudel_Lab4.docx  lab3.docx  lab5.docx
src/: audio_analyzer.py  helpers.py  lab1.py  lab2.2.py  lab2.3.py  lab2.py  lab3.2.py  lab3.py  lab4.py  lab5.3.py  lab5.py  labowrk5.1.py  labwork1.py  labwork2.1.py  labwork2.2.py  labwork2.py  labwork22.py  labwork3.1.py  labwork3.2.py  labwork4.py  labwork5.2.py  miniproject.py  resolution.py  test.py
src/Luniva/: helpers.py  labwork2.py  labwork22.py  labwork3.1.py  test.py
src/labs/: 2D_transformations.py  lab2.2.py  lab2.py  lab5.2.py  mid_point_circle.py  nepal_flag.py
