[tool.poetry]
name = "computer-graphics-iii.i"
version = "0.1.0"
description = ""
authors = ["avgt93 <abhijeetpoudel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyOpenGL = "^3.1.6"
glfw = "^2.5.5"
pyrr = "^0.10.3"
Pillow = "^9.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
